Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Check pending purchase to erase party
* Add wizard to modify purchase header after filling lines
* Make description on purchase line optional
* Add product supplier on purchase line
* Invoice received product instead of purchased product

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Do not plan backorder moves
* Add cron task to process confirmed purchase
* Add report_address property on purchase

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Add purchase price on product view from line
* Allow to edit delivery date on purchase line

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Manage readonly state on Purchase Line
* Allow purchase without payment term

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Rename Purchase reference into number and supplier reference into reference
* Add return location on warehouse
* Add Python3 support
* Replace Delivery Time by Lead Time on Product Template
* New workflow do() for purchase

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)
* Delivery Date of Line shows effective date if possible

Version 3.6.0 - 2015-04-20
* Bug fixes (see mercurial logs for details)
* Add support for PyPy
* Support mixed invoice type by line in invoiced quantity calculation
* Use TaxableMixin

Version 3.4.0 - 2014-10-20
* Bug fixes (see mercurial logs for details)
* Confirmed state split into Confirmed and Processing
* Use MatchMixin for ProductSupplier

Version 3.2.0 - 2014-04-21
* Bug fixes (see mercurial logs for details)
* Add link between stock moves and invoice lines
* Add warning for supplier moves without origin

Version 3.0.0 - 2013-10-21
* Bug fixes (see mercurial logs for details)
* Replace reference copying by relate

Version 2.8.0 - 2013-04-22
* Bug fixes (see mercurial logs for details)