@@ -1,3 +1,5 @@
+* Use today as fallback for purchase date report
+
 Version 4.8.0 - 2018-04-23
 * Bug fixes (see mercurial logs for details)
 * Check pending purchase to erase party
